Add Header and pictures to Section Projects

--- a/index.html
+++ b/index.html
@@ -5,33 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index_style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Anna Kyrii</title>
     <link rel="icon" type="image/png" href="/assets/images/logo_new.png">
 </head>
 <body>
-<header class="header">
-    <div class="container">
-        <div class="nav">
-            <div class="logo">
-                <img src="/assets/images/logo_new.png" class="header_logo_pic" alt="Anna Kyrii">
-                <div class="header_logo">ANNA KYRII ARCHITECTURAL PROJECTING GROUP</div>
-<!--            </div>-->
-
-<!--            <nav class="navigation">-->
-<!--                <a class="nav_link" href="#">Projects</a>-->
-<!--                <a class="nav_link" href="#">About us</a>-->
-<!--                <a class="nav_link" href="#">Contacts</a>-->
-<!--                <div class="other"></div>-->
-<!--            </nav>-->
+    <header class="header">
+        <div class="container">
+            <div class="nav">
+                <img src="/assets/images/logo_white.png" class="header_logo_pic" alt="Anna Kyrii">
+                <a href="#" class="header_text">Anna Kyrii Architectural Projecting Group</a>
+                <ul class="menu">
+                    <li> <a href="#"> Projects </a> </li>
+                    <li> <a href="#"> About us </a> </li>
+                    <li> <a href="#"> Contacts </a> </li>
+                    <li> <a href="#"> Ua </a> </li>
+                </ul>
+            </div>
+            <div class="catchword">
+                <h1>New Take <br> On Urban Life</h1>
+            </div>
         </div>
-    </div>
-</header>
+    </header>
 
-<div class="intro">
-    <div class="container">
-    </div>
-</div>
+    <section class="projects">
+        <div class="container">
+            <div class="photoFirstLine">
+                <div class="nszu">
+                    <img src="/assets/images/projects/01_nszu/front.png" class="projectPhoto">
+                    <p class="projectText"> NATIONAL HEALTH SERVICE </p>
+                </div>
+                <div class="leleka">
+                    <img src="/assets/images/projects/02_leleka/front.png" class="projectPhoto">
+                    <p class="projectText"> LELEKA </p>
+                </div>
+                <div class="aquapark">
+                    <img src="/assets/images/projects/03_aquapark/front.png" class="projectPhoto">
+                    <p class="projectText"> AQUAPARK </p>
+                </div>
+            </div>
+            <div class="photoFirstLine">
+                <div class="nszu">
+                    <img src="/assets/images/projects/01_nszu/front.png" class="projectPhoto">
+                    <p class="projectText"> NATIONAL HEALTH SERVICE </p>
+                </div>
+                <div class="leleka">
+                    <img src="/assets/images/projects/02_leleka/front.png" class="projectPhoto">
+                    <p class="projectText"> LELEKA </p>
+                </div>
+                <div class="aquapark">
+                    <img src="/assets/images/projects/03_aquapark/front.png" class="projectPhoto">
+                    <p class="projectText"> AQUAPARK </p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
