Change second picture line in Projects, made smooth scrolling to Project menu and back

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="index_style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Anna Kyrii</title>
-    <link rel="icon" type="image/png" href="/assets/images/logo_new.png">
+    <link rel="icon" type="image/png" href="/assets/images/projects/00_general/logo_new.png">
 </head>
 <body>
-    <header class="header">
+    <header class="header" id="header">
         <div class="container">
             <div class="nav">
-                <img src="/assets/images/logo_white.png" class="header_logo_pic" alt="Anna Kyrii">
-                <a href="#" class="header_text">Anna Kyrii Architectural Projecting Group</a>
+                <img src="/assets/images/projects/00_general/logo_white.png" class="header_logo_pic" alt="Anna Kyrii">
+                <a href="#header" class="header_text">Anna Kyrii Architectural Projecting Group</a>
                 <ul class="menu">
-                    <li> <a href="#"> Projects </a> </li>
+                    <li> <a href="#projects"> Projects </a> </li>
                     <li> <a href="#"> About us </a> </li>
                     <li> <a href="#"> Contacts </a> </li>
                     <li> <a href="#"> Ua </a> </li>
@@ -28,36 +28,41 @@
         </div>
     </header>
 
-    <section class="projects">
+    <section class="projects" id="projects" >
         <div class="container">
-            <div class="photoFirstLine">
+            <div class="photoLine" style="margin-bottom: 40px;">
                 <div class="nszu">
-                    <img src="/assets/images/projects/01_nszu/front.png" class="projectPhoto">
-                    <p class="projectText"> NATIONAL HEALTH SERVICE </p>
+                    <img src="/assets/images/projects/01_nszu/front.jpg" class="projectPhoto">
+                    <p class="projectText"> National Health Service </p>
                 </div>
                 <div class="leleka">
-                    <img src="/assets/images/projects/02_leleka/front.png" class="projectPhoto">
-                    <p class="projectText"> LELEKA </p>
+                    <img src="/assets/images/projects/02_leleka/front.jpg" class="projectPhoto">
+                    <p class="projectText"> Leleka </p>
                 </div>
                 <div class="aquapark">
-                    <img src="/assets/images/projects/03_aquapark/front.png" class="projectPhoto">
-                    <p class="projectText"> AQUAPARK </p>
+                    <img src="/assets/images/projects/03_aquapark/front.jpg" class="projectPhoto">
+                    <p class="projectText"> Aquapark </p>
                 </div>
             </div>
-            <div class="photoFirstLine">
-                <div class="nszu">
-                    <img src="/assets/images/projects/01_nszu/front.png" class="projectPhoto">
-                    <p class="projectText"> NATIONAL HEALTH SERVICE </p>
+            <div class="photoLine">
+                <div class="school">
+                    <img src="/assets/images/projects/04_school/front.jpg" class="projectPhoto">
+                    <p class="projectText"> School </p>
                 </div>
-                <div class="leleka">
-                    <img src="/assets/images/projects/02_leleka/front.png" class="projectPhoto">
-                    <p class="projectText"> LELEKA </p>
+                <div class="novaKakhovka">
+                    <img src="/assets/images/projects/05_nova_kakhovka/front.jpg" class="projectPhoto">
+                    <p class="projectText"> nova Kakhovka </p>
                 </div>
-                <div class="aquapark">
-                    <img src="/assets/images/projects/03_aquapark/front.png" class="projectPhoto">
-                    <p class="projectText"> AQUAPARK </p>
+                <div class="kindergartenZirochka">
+                    <img src="/assets/images/projects/06_kindergarten_zirochka/front.jpg" class="projectPhoto">
+                    <p class="projectText"> Kindergarten Zirochka </p>
                 </div>
             </div>
+            <div class="buttonMoreProjects">
+                <p> See More Projects </p>
+            </div>
+
+
         </div>
     </section>
 
