--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="containerHeader">
             <div class="nav">
                 <img src="assets/images/projects/00_general/logo_white.png" class="header_logo_pic" alt="Anna Kyrii">
-                <a href="#header" class="header_text">Anna Kyrii Architectural Projecting Group</a>
+                <a href="#header" class="header_text">Anna Kyrii <br> Architectural <br> Projecting Group</a>
                 <ul class="menu">
                     <li> <a href="#projects"> Projects </a> </li>
                     <li> <a href="#aboutUs"> About us </a> </li>
@@ -120,6 +120,14 @@
         
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1770.7396747517892!2d30.494899384453397!3d50.44801978473883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef54bbbd095%3A0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!5e0!3m2!1suk!2sua!4v1650473069279!5m2!1suk!2sua" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+           
+    </footer>
+
 
 </body>
 </html>
