Change See More Projects from text to button, add cursor: pointer to other buttons

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="buttonMoreProjects">
-                <p> See More Projects </p>
+                <button type="submit" class="moreProjectsBtn"> See More Projects </button>
             </div>
         </div>
     </section>
@@ -112,7 +112,7 @@
                             <textarea class="inputField" rows="9" style="height: 152px;"></textarea>                       
                         </div> 
                     </div>  
-                    <div class="button">
+                    <div class="submit">
                         <button type="submit" class="submitBtn"> Submit </button>
                     </div>   
                 </div>             
