Add counter button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header" id="header">
         <div class="containerHeader">
             <div class="nav">
-                <img src="assets/images/projects/00_general/logo_white.png" class="header_logo_pic" alt="Anna Kyrii">
+                <a href="#header"><img src="assets/images/projects/00_general/logo_white.png" class="header_logo_pic" alt="Anna Kyrii"></a>
                 <a href="#header" class="header_text">Anna Kyrii <br> Architectural <br> Projecting Group</a>
                 <ul class="menu">
                     <li> <a href="#projects"> Projects </a> </li>
@@ -113,7 +113,8 @@
                         </div> 
                     </div>  
                     <div class="submit">
-                        <button type="submit" class="submitBtn"> Submit </button>
+                        <button type="submit" class="submitBtn" onclick="sayClick()"> Submit </button>
+                        <div class="submitBtn"> 0 </div>
                     </div>   
                 </div>             
             </div>
@@ -138,7 +139,6 @@
             </div>  
         </div>      
     </footer>
-
-
+    <script src="apg_kyrii.js"></script>
 </body>
 </html>
