--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                         </div> 
                     </div>  
                     <div class="submit">
-                        <button type="submit" class="submitBtn" onclick="sayClick()"> Submit </button>
-                        <div class="submitBtn"> 0 </div>
+                        <button type="submit" class="submitBtn" onclick="countClick()"> Submit </button>
+                        <div class="submitBtn" id="divCounter"> 0 </div>
                     </div>   
                 </div>             
             </div>
