--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <div class="input">
                         <div class="inputBlock">
                             <p class="inputText"> Name </p>
-                            <input type="text" class="inputField" required>
+                            <input type="text" class="inputField" id="inputName" required>
                         </div> 
                         <div class="inputBlock">
                             <p class="inputText"> Phone Number </p>
@@ -123,10 +123,7 @@
     </section>
 
     <footer class="footer">
-        <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1770.7396747517892!2d30.494899384453397!3d50.44801978473883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef54bbbd095%3A0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!5e0!3m2!1suk!2sua!4v1650473069279!5m2!1suk!2sua" width="100%" height="200" style="border:0; filter: grayscale(100%);" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
-        </div>
-        <div class="containerFooter">
+            <div class="containerFooter">
             <div class="contactInfo">
                 <div class="contacts">
                     <p class="footerText">Of. 2-A, 82, O.Gonchara Str., <br> 01054, Kyiv, <br> Ukraine <br> in@kyrii-group.com.ua </p>
