Made logo clickable

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header" id="header">
         <div class="containerHeader">
             <div class="nav">
-                <img src="assets/images/projects/00_general/logo_white.png" class="header_logo_pic" alt="Anna Kyrii">
+                <a href="#header"><img src="assets/images/projects/00_general/logo_white.png" class="header_logo_pic" alt="Anna Kyrii"></a>
                 <a href="#header" class="header_text">Anna Kyrii <br> Architectural <br> Projecting Group</a>
                 <ul class="menu">
                     <li> <a href="#projects"> Projects </a> </li>
