--- a/index.html
+++ b/index.html
@@ -15,18 +15,66 @@
     <main class="page__main">
         <header class="page__header">
             <div class="page__container">
-                <a href="#header"><img src="assets/images/projects/00_general/logo_white.png" class="header_logo-pic" alt="Anna Kyrii"></a>
-                <a href="#header" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
-                <ul class="header__navigation">
-                    <li> <a href="#" > Projects </a> </li>
-                    <li> <a href="#"> About us </a> </li>
-                    <li> <a href="#"> Contacts </a> </li>
-                    <li> <a href="#"> Ua </a> </li>
-                </ul>
+                <div class="page__nav-bar">
+                    <div class="header__logo">
+                        <a href="#header" class="header_logo-pic"><img src="assets/images/projects/00_general/logo_white.png" class="header_logo-pic" alt="Anna Kyrii"></a>
+                        <a href="#header" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
+                    </div>
+                    <ul class="header__navigation">
+                        <li> <a href="#" > Projects </a> </li>
+                        <li> <a href="#"> About us </a> </li>
+                        <li> <a href="#"> Contacts </a> </li>
+                        <li> <a href="#"> Ua </a> </li>
+                    </ul>
+                </div>
             </div>
         </header>
 
+        <section class="page__content">
+            <div class="page__container">
+                <div class="page__slider">
 
+                </div>
+                <div class="page__projects">
+                    <div class="project__wrapper">
+                        <div class="project__nszu project__content">
+                            <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                            <p class="project__text"> National Health Service </p>
+                        </div>
+                        <div class="project__leleka project__content">
+                            <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                            <p class="project__text"> National Health Service </p>
+                        </div>
+                        <div class="project__aquapark project__content">
+                            <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                            <p class="project__text"> National Health Service </p>
+                        </div>
+                        <div class="project__brovary project__content">
+                            <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                            <p class="project__text"> National Health Service </p>
+                        </div>
+                        <div class="project__nova-kakhovka project__content">
+                            <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                            <p class="project__text"> National Health Service </p>
+                        </div>
+                        <div class="project__zirochka project__content">
+                            <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                            <p class="project__text"> National Health Service </p>
+                        </div>
+                    </div>
+                    <div class="project__more-projects">
+                        <button type="submit" class="more-projects-btn"> See More Projects </button>
+                    </div>
+                </div>
+                <div class="page__about-us">
+
+                </div>
+                <div class="page__contacts">
+
+                </div>
+
+            </div> 
+        </section>
         <!-- <section class="projects" id="projects" >
             <div class="containerProjets">
                 <div class="photoLine" style="margin-bottom: 40px;">
