Add styles to button. Made them unified

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <a href="#header" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
                     </div>
                     <ul class="header__navigation">
-                        <li> <a href="#" > Projects </a> </li>
+                        <li> <a href="#project__wrapper" > Projects </a> </li>
                         <li> <a href="#"> About us </a> </li>
                         <li> <a href="#"> Contacts </a> </li>
                         <li> <a href="#"> Ua </a> </li>
@@ -36,40 +36,44 @@
 
                 </div>
                 <div class="page__projects">
-                    <div class="project__wrapper">
-                        <div class="project__nszu project__content">
-                            <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
-                            <p class="project__text"> National Health Service </p>
+                    <div class="section-wrapper" id="project__wrapper">
+                        <div class="project__wrapper">
+                            <div class="project__nszu project__content">
+                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                <p class="project__text"> National Health Service </p>
+                            </div>
+                            <div class="project__leleka project__content">
+                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                <p class="project__text"> National Health Service </p>
+                            </div>
+                            <div class="project__aquapark project__content">
+                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                <p class="project__text"> National Health Service </p>
+                            </div>
+                            <div class="project__brovary project__content">
+                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                <p class="project__text"> National Health Service </p>
+                            </div>
+                            <div class="project__nova-kakhovka project__content">
+                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                <p class="project__text"> National Health Service </p>
+                            </div>
+                            <div class="project__zirochka project__content">
+                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                <p class="project__text"> National Health Service </p>
+                            </div>
                         </div>
-                        <div class="project__leleka project__content">
-                            <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
-                            <p class="project__text"> National Health Service </p>
+                        <div class="project__more-projects">
+                            <button type="submit" class="more-projects-btn">
+                                <p class="more-projects-btn-text"> See More Projects </p>
+                            </button>
                         </div>
-                        <div class="project__aquapark project__content">
-                            <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
-                            <p class="project__text"> National Health Service </p>
-                        </div>
-                        <div class="project__brovary project__content">
-                            <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
-                            <p class="project__text"> National Health Service </p>
-                        </div>
-                        <div class="project__nova-kakhovka project__content">
-                            <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
-                            <p class="project__text"> National Health Service </p>
-                        </div>
-                        <div class="project__zirochka project__content">
-                            <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
-                            <p class="project__text"> National Health Service </p>
-                        </div>
-                    </div>
-                    <div class="project__more-projects">
-                        <button type="submit" class="more-projects-btn"> See More Projects </button>
                     </div>
                 </div>
-                <div class="page__about-us">
+                <div class="page__about-us section-wrapper">
 
                 </div>
-                <div class="page__contacts">
+                <div class="page__contacts section-wrapper">
 
                 </div>
 
