--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     </div>
                     <ul class="header__navigation">
                         <li> <a href="#project__wrapper" > Projects </a> </li>
-                        <li> <a href="#"> About us </a> </li>
-                        <li> <a href="#"> Contacts </a> </li>
+                        <li> <a href="#page__about-us"> About us </a> </li>
+                        <li> <a href="#page__contacts"> Contacts </a> </li>
                         <li> <a href="#"> Ua </a> </li>
                     </ul>
                 </div>
@@ -70,10 +70,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="page__about-us section-wrapper">
+                <div class="page__about-us section-wrapper" id="page__about-us">
 
                 </div>
-                <div class="page__contacts section-wrapper">
+                <div class="page__contacts section-wrapper" id="page__contacts">
 
                 </div>
 
@@ -174,14 +174,14 @@
 
     </main>
 
-    <footer class="page__footer">
+    <footer class="page__footer section-wrapper">
         <div class="footer__map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1770.7396747517892!2d30.494899384453397!3d50.44801978473883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef54bbbd095%3A0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!5e0!3m2!1suk!2sua!4v1650473069279!5m2!1suk!2sua" width="100%" height="200" style="border:0; filter: grayscale(100%);" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1770.7396747517892!2d30.494899384453397!3d50.44801978473883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef54bbbd095%3A0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!5e0!3m2!1suk!2sua!4v1650473069279!5m2!1suk!2sua" width="100%" min-width="300px" height="200" style="border:0; filter: grayscale(100%);" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
         </div>
         <div class="page__container">
             <div class="footer__contact-info">
                 <div class="contacts">
-                    <a href="https://www.google.com/maps/place/%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%BD%D0%BE-%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%BD%D0%B0%D1%8F+%D0%B3%D1%80%D1%83%D0%BF%D0%BF%D0%B0+%D0%90%D0%BD%D0%BD%D1%8B+%D0%9A%D0%B8%D1%80%D0%B8%D0%B9/@50.4484759,30.497488,17z/data=!4m13!1m7!3m6!1s0x40d4cef54bbbd095:0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!3b1!8m2!3d50.4484355!4d30.4971632!3m4!1s0x40d4cef54be8e5cf:0x181e795e2e17cacc!8m2!3d50.4484289!4d30.4973407" class="contacts__details contacts__adress">Of. 2-A, 82, O.Gonchara Str., <br> 01054, Kyiv, <br> Ukraine</a>
+                    <a href="https://www.google.com/maps/place/%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%BD%D0%BE-%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%BD%D0%B0%D1%8F+%D0%B3%D1%80%D1%83%D0%BF%D0%BF%D0%B0+%D0%90%D0%BD%D0%BD%D1%8B+%D0%9A%D0%B8%D1%80%D0%B8%D0%B9/@50.4484759,30.497488,17z/data=!4m13!1m7!3m6!1s0x40d4cef54bbbd095:0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!3b1!8m2!3d50.4484355!4d30.4971632!3m4!1s0x40d4cef54be8e5cf:0x181e795e2e17cacc!8m2!3d50.4484289!4d30.4973407" class="contacts__details contacts__adress">Of. 2-A, 82, O.Gonchara Str., <br> 01054, Kyiv, Ukraine</a>
                     <p class="contacts__details contacts__e-mail">in@kyrii-group.com.ua</p>
                     <!-- <p class="footerText">Of. 2-A, 82, O.Gonchara Str., <br> 01054, Kyiv, <br> Ukraine <br> in@kyrii-group.com.ua </p> -->
                     <a href= “tel:+380987789013” class="contacts__details contacts__tel">Tel: +38 (044) 486 35 36</a>
