Fixed picture size to make better adaptivity ; Make button hover

--- a/index.html
+++ b/index.html
@@ -39,34 +39,32 @@
                     <div class="section-wrapper" id="project__wrapper">
                         <div class="project__wrapper">
                             <div class="project__nszu project__content">
-                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
                                 <p class="project__text"> National Health Service </p>
                             </div>
                             <div class="project__leleka project__content">
-                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
                                 <p class="project__text"> National Health Service </p>
                             </div>
                             <div class="project__aquapark project__content">
-                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
                                 <p class="project__text"> National Health Service </p>
                             </div>
                             <div class="project__brovary project__content">
-                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
                                 <p class="project__text"> National Health Service </p>
                             </div>
                             <div class="project__nova-kakhovka project__content">
-                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
                                 <p class="project__text"> National Health Service </p>
                             </div>
                             <div class="project__zirochka project__content">
-                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
+                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
                                 <p class="project__text"> National Health Service </p>
                             </div>
                         </div>
                         <div class="project__more-projects">
-                            <button type="submit" class="more-projects-btn">
-                                <p class="more-projects-btn-text"> See More Projects </p>
-                            </button>
+                            <button type="submit" class="more-projects-btn more-projects-btn-text">See More Projects</button>
                         </div>
                     </div>
                 </div>
@@ -131,7 +129,7 @@
 
             </div> 
         </section>
-        
+
         <!-- <section class="projects" id="projects" >
             <div class="containerProjets">
                 <div class="photoLine" style="margin-bottom: 40px;">
