--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 </head>
 <body>
     <main class="page__main">
-        <header class="page__header">
+        <header class="page__header" >
             <div class="page__container">
                 <div class="page__nav-bar">
                     <div class="header__logo">
-                        <a href="#header" class="header_logo-pic"><img src="assets/images/projects/00_general/logo_white.png" class="header_logo-pic" alt="Anna Kyrii"></a>
-                        <a href="#header" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
+                        <a href="#" class="header_logo-pic"><img src="assets/images/projects/00_general/logo_white.png" class="header_logo-pic" alt="Anna Kyrii"></a>
+                        <a href="#" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
                     </div>
-                    <ul class="header__navigation">
-                        <li> <a href="#project__wrapper" > Projects </a> </li>
+                    <ul class="header__navigation" >
+                        <li> <a href="#page__projects" > Projects </a> </li>
                         <li> <a href="#page__about-us"> About us </a> </li>
                         <li> <a href="#page__contacts"> Contacts </a> </li>
                         <li> <a href="#"> Ua </a> </li>
@@ -35,8 +35,8 @@
                 <div class="page__slider">
 
                 </div>
-                <div class="page__projects">
-                    <div class="section-wrapper" id="project__wrapper">
+                <div class="page__projects" id="page__projects">
+                    <div class="section-wrapper" >
                         <div class="project__wrapper">
                             <div class="project__nszu project__content">                                
                                 <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
@@ -233,7 +233,7 @@
         <div class="page__container">
             <div class="footer__contact-info">
                 <div class="contacts">
-                    <a href="https://www.google.com/maps/place/%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%BD%D0%BE-%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%BD%D0%B0%D1%8F+%D0%B3%D1%80%D1%83%D0%BF%D0%BF%D0%B0+%D0%90%D0%BD%D0%BD%D1%8B+%D0%9A%D0%B8%D1%80%D0%B8%D0%B9/@50.4484759,30.497488,17z/data=!4m13!1m7!3m6!1s0x40d4cef54bbbd095:0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!3b1!8m2!3d50.4484355!4d30.4971632!3m4!1s0x40d4cef54be8e5cf:0x181e795e2e17cacc!8m2!3d50.4484289!4d30.4973407" class="contacts__details contacts__adress">Of. 2-A, 82, O.Gonchara Str., <br> 01054, Kyiv, Ukraine</a>
+                    <a href="https://www.google.com/maps/place/%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%BD%D0%BE-%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%BD%D0%B0%D1%8F+%D0%B3%D1%80%D1%83%D0%BF%D0%BF%D0%B0+%D0%90%D0%BD%D0%BD%D1%8B+%D0%9A%D0%B8%D1%80%D0%B8%D0%B9/@50.4484759,30.497488,17z/data=!4m13!1m7!3m6!1s0x40d4cef54bbbd095:0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!3b1!8m2!3d50.4484355!4d30.4971632!3m4!1s0x40d4cef54be8e5cf:0x181e795e2e17cacc!8m2!3d50.4484289!4d30.4973407" class="contacts__details contacts__adress" id="contacts__adress" target="_blank">Of. 2-A, 82, O.Gonchara Str., <br> 01054, Kyiv, Ukraine</a>
                     <p class="contacts__details contacts__e-mail">in@kyrii-group.com.ua</p>
                     <!-- <p class="footerText">Of. 2-A, 82, O.Gonchara Str., <br> 01054, Kyiv, <br> Ukraine <br> in@kyrii-group.com.ua </p> -->
                     <a href= “tel:+380987789013” class="contacts__details contacts__tel">Tel: +38 (044) 486 35 36</a>
