--- a/projects.html
+++ b/projects.html
@@ -13,17 +13,17 @@
 </head>
 <body>
     <main class="page__main">
-        <header class="page__header">
+        <header class="page__header" id="page__header"> 
             <div class="page__container">
                 <div class="page__nav-bar">
                     <div class="header__logo">
-                        <a href="#header" class="header_logo-pic"><img src="assets/images/projects/00_general/logo_white.png" class="header_logo-pic" alt="Anna Kyrii"></a>
-                        <a href="#header" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
+                        <a href="#page__header" class="header_logo-pic"><img src="assets/images/projects/00_general/logo_white.png" class="header_logo-pic" alt="Anna Kyrii"></a>
+                        <a href="#page__header" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
                     </div>
                     <ul class="header__navigation">
-                        <li> <a href="#project__wrapper" > Projects </a> </li>
-                        <li> <a href="#page__about-us"> About us </a> </li>
-                        <li> <a href="#page__contacts"> Contacts </a> </li>
+                        <li> <a href="#" > Projects </a> </li>
+                        <li> <a href="#"> About us </a> </li>
+                        <li> <a href="#"> Contacts </a> </li>
                         <li> <a href="#"> Ua </a> </li>
                     </ul>
                 </div>
