Add Contact us page and Facebook sign in navigation

--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,7 @@
                         <li> <a href="#"> About us </a> </li>
                         <li> <a href="#"> Contacts </a> </li>
                         <li> <a href="#"> Ua </a> </li>
+                        <li> <a href="https://www.facebook.com/kyriigroup/" target="_blank"><img src="assets/images/projects/00_general/fb-icon.svg"></a></li>
                     </ul>
                 </div>
             </div>
