--- a/contact_us.html
+++ b/contact_us.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style/normalize.css">  <!-- add reset style --> 
-    <link rel="stylesheet" href="assets/style/style.css">   <!-- new css -->
-    <!-- <link rel="stylesheet" href="index_style.css">   old css -->
+    <link rel="stylesheet" href="assets/style/style.css">   <!-- main page css -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Anna Kyrii</title>
     <link rel="icon" type="image/png" href="assets/images/projects/00_general/logo_new.png">
@@ -25,7 +24,7 @@
                         <li> <a href="#page__about-us"> About us </a> </li>
                         <li> <a href="#page__contacts"> Contacts </a> </li>
                         <li> <a href="#"> Ua </a> </li>
-                        <li> <a href="https://www.facebook.com/kyriigroup/" target="_blank"><img src="assets/images/projects/00_general/fb-icon.svg" ></a></li>
+                        <li> <a href="https://www.facebook.com/kyriigroup/" target="_blank"><img src="assets/images/projects/00_general/fb-icon.svg"></a></li>                        
                     </ul>
                 </div>
             </div>
@@ -33,46 +32,6 @@
 
         <section class="page__content">
             <div class="page__container">
-                <div class="page__slider">
-
-                </div>
-                <div class="page__projects" id="page__projects">
-                    <div class="section-wrapper" >
-                        <div class="project__wrapper">
-                            <div class="project__nszu project__content">                                
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
-                                <!-- <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover"> -->                                
-                                <p class="project__text"> National Health Service </p>
-                            </div>
-                            <div class="project__leleka project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
-                            </div>
-                            <div class="project__aquapark project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
-                            </div>
-                            <div class="project__brovary project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
-                            </div>
-                            <div class="project__nova-kakhovka project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
-                            </div>
-                            <div class="project__zirochka project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
-                                <p class="project__text"> National Health Service </p>
-                            </div>
-                        </div>
-                        <div class="project__more-projects">
-                            <button type="submit" class="more-projects-btn more-projects-btn-text">See More Projects</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="page__about-us section-wrapper" id="page__about-us">
-
-                </div>
                 <div class="page__contacts" id="page__contacts">
                     <div class="section-wrapper contacts">
                         <div class="contacts__container">
@@ -128,31 +87,27 @@
                         </div>
                     </div>
                 </div>
-
-            </div> 
+            </div>
         </section>
+        <footer class="page__footer section-wrapper">
+            <div class="footer__map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1770.7396747517892!2d30.494899384453397!3d50.44801978473883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef54bbbd095%3A0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!5e0!3m2!1suk!2sua!4v1650473069279!5m2!1suk!2sua" width="100%" min-width="300px" height="200" style="border:0; filter: grayscale(100%);" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
+            </div>
+            <div class="page__container">
+                <div class="footer__contact-info">
+                    <div class="contacts">
+                        <a href="https://www.google.com/maps/place/%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%BD%D0%BE-%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%BD%D0%B0%D1%8F+%D0%B3%D1%80%D1%83%D0%BF%D0%BF%D0%B0+%D0%90%D0%BD%D0%BD%D1%8B+%D0%9A%D0%B8%D1%80%D0%B8%D0%B9/@50.4484759,30.497488,17z/data=!4m13!1m7!3m6!1s0x40d4cef54bbbd095:0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!3b1!8m2!3d50.4484355!4d30.4971632!3m4!1s0x40d4cef54be8e5cf:0x181e795e2e17cacc!8m2!3d50.4484289!4d30.4973407" class="contacts__details contacts__adress" id="contacts__adress" target="_blank">Of. 2-A, 82, O.Gonchara Str., <br> 01054, Kyiv, Ukraine</a>
+                        <p class="contacts__details contacts__e-mail">in@kyrii-group.com.ua</p>
+                        <!-- <p class="footerText">Of. 2-A, 82, O.Gonchara Str., <br> 01054, Kyiv, <br> Ukraine <br> in@kyrii-group.com.ua </p> -->
+                        <a href= “tel:+380987789013” class="contacts__details contacts__tel">Tel: +38 (044) 486 35 36</a>
+                    </div>
+                    <div class="privacy-policy">
+                        <img src="assets/images/projects/00_general/logo_white.png" class="privacy-policy__logo">
+                        <p class="privacy-policy__text" style="text-align: center;"> Privacy Policy </p>
+                    </div>
+                </div>  
+            </div>      
+        </footer>
     </main>
-
-    <footer class="page__footer section-wrapper">
-        <div class="footer__map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1770.7396747517892!2d30.494899384453397!3d50.44801978473883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef54bbbd095%3A0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!5e0!3m2!1suk!2sua!4v1650473069279!5m2!1suk!2sua" width="100%" min-width="300px" height="200" style="border:0; filter: grayscale(100%);" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
-        </div>
-        <div class="page__container">
-            <div class="footer__contact-info">
-                <div class="contacts">
-                    <a href="https://www.google.com/maps/place/%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%BD%D0%BE-%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%BD%D0%B0%D1%8F+%D0%B3%D1%80%D1%83%D0%BF%D0%BF%D0%B0+%D0%90%D0%BD%D0%BD%D1%8B+%D0%9A%D0%B8%D1%80%D0%B8%D0%B9/@50.4484759,30.497488,17z/data=!4m13!1m7!3m6!1s0x40d4cef54bbbd095:0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!3b1!8m2!3d50.4484355!4d30.4971632!3m4!1s0x40d4cef54be8e5cf:0x181e795e2e17cacc!8m2!3d50.4484289!4d30.4973407" class="contacts__details contacts__adress" id="contacts__adress" target="_blank">Of. 2-A, 82, O.Gonchara Str., <br> 01054, Kyiv, Ukraine</a>
-                    <p class="contacts__details contacts__e-mail">in@kyrii-group.com.ua</p>
-                    <!-- <p class="footerText">Of. 2-A, 82, O.Gonchara Str., <br> 01054, Kyiv, <br> Ukraine <br> in@kyrii-group.com.ua </p> -->
-                    <a href= “tel:+380987789013” class="contacts__details contacts__tel">Tel: +38 (044) 486 35 36</a>
-                </div>
-                <div class="privacy-policy">
-                    <img src="assets/images/projects/00_general/logo_white.png" class="privacy-policy__logo">
-                    <p class="privacy-policy__text" style="text-align: center;"> Privacy Policy </p>
-                </div>
-            </div>  
-        </div>      
-    </footer>
-
-
 </body>
 </html>
