--- a/index.html
+++ b/index.html
@@ -65,14 +65,49 @@
                                 <p class="project__text"> National Health Service </p>
                             </div>
                         </div>
-                        <div class="project__more-projects">
-                            <button type="submit" class="more-projects-btn more-projects-btn-text">See More Projects</button>
+                        <div class="project__more-projects more-btn">
+                            <button type="submit" class="more-projects-btn more-btn-text">See More Projects</button>
                         </div>
                     </div>
                 </div>
-                <div class="page__about-us section-wrapper" id="page__about-us">
 
+
+                <div class="page__about-us" id="page__about-us">
+                    <div class="section-wrapper about-us">
+                        <div class="about-us__container"> 
+                            <div class="emp-block">
+                                <img src="assets/images/projects/00_general/photo.jpg" alt="" class="emp-block__photo">
+                                <p class="emp-block__name">Lorem Ipsum</p>
+                                <p class="emp-block__position">Architect</p>
+                            </div>
+                            <div class="emp-block">
+                                <img src="assets/images/projects/00_general/photo.jpg" alt="" class="emp-block__photo">
+                                <p class="emp-block__name">Lorem Ipsum</p>
+                                <p class="emp-block__position">Architect</p>
+                            </div>
+                            <div class="emp-block">
+                                <img src="assets/images/projects/00_general/photo.jpg" alt="" class="emp-block__photo">
+                                <p class="emp-block__name">Lorem Ipsum</p>
+                                <p class="emp-block__position">Architect</p>
+                            </div>
+                            <div class="emp-block">
+                                <img src="assets/images/projects/00_general/photo.jpg" alt="" class="emp-block__photo">
+                                <p class="emp-block__name">Lorem Ipsum</p>
+                                <p class="emp-block__position">Architect</p>
+                            </div>
+                            <div class="emp-block">
+                                <img src="assets/images/projects/00_general/photo.jpg" alt="" class="emp-block__photo">
+                                <p class="emp-block__name">Lorem Ipsum</p>
+                                <p class="emp-block__position">Architect</p>
+                            </div>
+                        </div>
+                        <div class="about-us__more-btn more-btn">
+                            <button type="submit" class="about-us-btn more-btn-text">About us</button>
+                        </div>
+                    </div>
                 </div>
+
+
                 <div class="page__contacts" id="page__contacts">
                     <div class="section-wrapper contacts">
                         <div class="contacts__container">
@@ -143,7 +178,7 @@
                     <a href="https://www.google.com/maps/place/%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%BD%D0%BE-%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%BD%D0%B0%D1%8F+%D0%B3%D1%80%D1%83%D0%BF%D0%BF%D0%B0+%D0%90%D0%BD%D0%BD%D1%8B+%D0%9A%D0%B8%D1%80%D0%B8%D0%B9/@50.4484759,30.497488,17z/data=!4m13!1m7!3m6!1s0x40d4cef54bbbd095:0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!3b1!8m2!3d50.4484355!4d30.4971632!3m4!1s0x40d4cef54be8e5cf:0x181e795e2e17cacc!8m2!3d50.4484289!4d30.4973407" class="contacts__details contacts__adress" id="contacts__adress" target="_blank">Of. 2-A, 82, O.Gonchara Str., <br> 01054, Kyiv, Ukraine</a>
                     <p class="contacts__details contacts__e-mail">in@kyrii-group.com.ua</p>
                     <!-- <p class="footerText">Of. 2-A, 82, O.Gonchara Str., <br> 01054, Kyiv, <br> Ukraine <br> in@kyrii-group.com.ua </p> -->
-                    <a href= “tel:+380987789013” class="contacts__details contacts__tel">Tel: +38 (044) 486 35 36</a>
+                    <a href= “tel:+380987789013” class="contacts__details contacts__tel">tel: +38 (044) 486 35 36</a>
                 </div>
                 <div class="privacy-policy">
                     <img src="assets/images/projects/00_general/logo_white.png" class="privacy-policy__logo">
