Fixed small bugs in buttons and add links to other pages

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div class="page__container">
                 <div class="page__nav-bar">
                     <div class="header__logo">
-                        <a href="#" class="header_logo-pic"><img src="assets/images/projects/00_general/logo_white.png" class="header_logo-pic" alt="Anna Kyrii"></a>
-                        <a href="#" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
+                        <a href="index.html" class="header_logo-pic"><img src="assets/images/projects/00_general/logo_white.png" class="header_logo-pic" alt="Anna Kyrii"></a>
+                        <a href="index.html" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
                     </div>
                     <ul class="header__navigation" >
                         <li> <a href="#page__projects" > Projects </a> </li>
@@ -66,7 +66,7 @@
                             </div>
                         </div>
                         <div class="project__more-projects more-btn">
-                            <button type="submit" class="more-projects-btn more-btn-text">See More Projects</button>
+                            <button type="submit" class="more-section-btn"><a href="projects.html" class="more-btn-text">See More Projects</a></button>
                         </div>
                     </div>
                 </div>
@@ -76,33 +76,38 @@
                     <div class="section-wrapper about-us">
                         <div class="about-us__container"> 
                             <div class="emp-block">
-                                <img src="assets/images/projects/00_general/photo.jpg" alt="" class="emp-block__photo">
+                                <img src="assets/images/projects/00_general/front.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name">Lorem Ipsum</p>
                                 <p class="emp-block__position">Architect</p>
                             </div>
                             <div class="emp-block">
-                                <img src="assets/images/projects/00_general/photo.jpg" alt="" class="emp-block__photo">
+                                <img src="assets/images/projects/00_general/front.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name">Lorem Ipsum</p>
                                 <p class="emp-block__position">Architect</p>
                             </div>
                             <div class="emp-block">
-                                <img src="assets/images/projects/00_general/photo.jpg" alt="" class="emp-block__photo">
+                                <img src="assets/images/projects/00_general/front.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name">Lorem Ipsum</p>
                                 <p class="emp-block__position">Architect</p>
                             </div>
                             <div class="emp-block">
-                                <img src="assets/images/projects/00_general/photo.jpg" alt="" class="emp-block__photo">
+                                <img src="assets/images/projects/00_general/front.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name">Lorem Ipsum</p>
                                 <p class="emp-block__position">Architect</p>
                             </div>
                             <div class="emp-block">
-                                <img src="assets/images/projects/00_general/photo.jpg" alt="" class="emp-block__photo">
+                                <img src="assets/images/projects/00_general/front.jpg" alt="" class="emp-block__photo">
+                                <p class="emp-block__name">Lorem Ipsum</p>
+                                <p class="emp-block__position">Architect</p>
+                            </div>
+                            <div class="emp-block">
+                                <img src="assets/images/projects/00_general/front.jpg" alt="" class="emp-block__photo">
                                 <p class="emp-block__name">Lorem Ipsum</p>
                                 <p class="emp-block__position">Architect</p>
                             </div>
                         </div>
                         <div class="about-us__more-btn more-btn">
-                            <button type="submit" class="about-us-btn more-btn-text">About us</button>
+                            <button type="submit" class="more-section-btn"><a href="#" class="more-btn-text">About us</a></button>
                         </div>
                     </div>
                 </div>
