--- a/projects.html
+++ b/projects.html
@@ -17,13 +17,13 @@
             <div class="page__container">
                 <div class="page__nav-bar">
                     <div class="header__logo">
-                        <a href="#page__header" class="header_logo-pic"><img src="assets/images/projects/00_general/logo_white.png" class="header_logo-pic" alt="Anna Kyrii"></a>
-                        <a href="#page__header" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
+                        <a href="index.html" class="header_logo-pic"><img src="assets/images/projects/00_general/logo_white.png" class="header_logo-pic" alt="Anna Kyrii"></a>
+                        <a href="index.html" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
                     </div>
                     <ul class="header__navigation">
                         <li> <a href="#" > Projects </a> </li>
                         <li> <a href="#"> About us </a> </li>
-                        <li> <a href="#"> Contacts </a> </li>
+                        <li> <a href="contact_us.html"> Contacts </a> </li>
                         <li> <a href="#"> Ua </a> </li>
                         <li> <a href="https://www.facebook.com/kyriigroup/" target="_blank"><img src="assets/images/projects/00_general/fb-icon.svg"></a></li>
                     </ul>
