--- a/contact_us.html
+++ b/contact_us.html
@@ -16,13 +16,13 @@
             <div class="page__container">
                 <div class="page__nav-bar">
                     <div class="header__logo">
-                        <a href="#" class="header_logo-pic"><img src="assets/images/projects/00_general/logo_white.png" class="header_logo-pic" alt="Anna Kyrii"></a>
-                        <a href="#" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
+                        <a href="index.html" class="header_logo-pic"><img src="assets/images/projects/00_general/logo_white.png" class="header_logo-pic" alt="Anna Kyrii"></a>
+                        <a href="index.html" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
                     </div>
                     <ul class="header__navigation" >
-                        <li> <a href="#page__projects" > Projects </a> </li>
-                        <li> <a href="#page__about-us"> About us </a> </li>
-                        <li> <a href="#page__contacts"> Contacts </a> </li>
+                        <li> <a href="projects.html" > Projects </a> </li>
+                        <li> <a href="#"> About us </a> </li>
+                        <li> <a href="#"> Contacts </a> </li>
                         <li> <a href="#"> Ua </a> </li>
                         <li> <a href="https://www.facebook.com/kyriigroup/" target="_blank"><img src="assets/images/projects/00_general/fb-icon.svg"></a></li>                        
                     </ul>
