Add About Us page

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <div class="page__container">
                 <div class="page__nav-bar">
                     <div class="header__logo">
-                        <a href="index.html" class="header_logo-pic"><img src="assets/images/projects/00_general/logo_white.png" class="header_logo-pic" alt="Anna Kyrii"></a>
+                        <a href="index.html" class="header_logo-pic"><img src="assets/images/projects/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
                         <a href="index.html" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
                     </div>
                     <ul class="header__navigation" >
-                        <li> <a href="#page__projects" > Projects </a> </li>
+                        <li> <a href="#page__projects"> Projects </a> </li>
                         <li> <a href="#page__about-us"> About us </a> </li>
                         <li> <a href="#page__contacts"> Contacts </a> </li>
                         <li> <a href="#"> Ua </a> </li>
@@ -40,28 +40,28 @@
                     <div class="section-wrapper" >
                         <div class="project__wrapper">
                             <div class="project__nszu project__content">                                
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
+                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
                                 <!-- <img src="assets/images/projects/01_nszu/front_2.jpg" class="project__photo-hover"> -->                                
                                 <p class="project__text"> National Health Service </p>
                             </div>
                             <div class="project__leleka project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
+                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
                                 <p class="project__text"> National Health Service </p>
                             </div>
                             <div class="project__aquapark project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
+                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
                                 <p class="project__text"> National Health Service </p>
                             </div>
                             <div class="project__brovary project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
+                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
                                 <p class="project__text"> National Health Service </p>
                             </div>
                             <div class="project__nova-kakhovka project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
+                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
                                 <p class="project__text"> National Health Service </p>
                             </div>
                             <div class="project__zirochka project__content">
-                                <img src="assets/images/projects/01_nszu/front_small.jpg" class="project__photo">
+                                <img src="assets/images/projects/01_nszu/front.jpg" class="project__photo">
                                 <p class="project__text"> National Health Service </p>
                             </div>
                         </div>
@@ -107,7 +107,7 @@
                             </div>
                         </div>
                         <div class="about-us__more-btn more-btn">
-                            <button type="submit" class="more-section-btn"><a href="#" class="more-btn-text">About us</a></button>
+                            <button type="submit" class="more-section-btn"><a href="about_us.html" class="more-btn-text">About us</a></button>
                         </div>
                     </div>
                 </div>
@@ -186,7 +186,7 @@
                     <a href= “tel:+380987789013” class="contacts__details contacts__tel">tel: +38 (044) 486 35 36</a>
                 </div>
                 <div class="privacy-policy">
-                    <img src="assets/images/projects/00_general/logo_white.png" class="privacy-policy__logo">
+                    <img src="assets/images/projects/00_general/logo_black.svg" class="privacy-policy__logo">
                     <p class="privacy-policy__text" style="text-align: center;"> Privacy Policy </p>
                 </div>
             </div>  
