Started to split HTML document in small parts using js class

--- a/index.html
+++ b/index.html
@@ -193,6 +193,6 @@
         </div>      
     </footer>
 
-
+    <script type=module src="assets/js/partly_html.js"></script> <!-- Import parts of page HTML -->
 </body>
 </html>
