Split HTML files to small parts

--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
                     <ul class="header__navigation">
                         <li> <a href="#" > Projects </a> </li>
                         <li> <a href="about_us.html"> About us </a> </li>
-                        <li> <a href="contact_us.html"> Contacts </a> </li>
+                        <li> <a href="contacts.html"> Contacts </a> </li>
                         <li> <a href="#"> Ua </a> </li>
                         <li> <a href="https://www.facebook.com/kyriigroup/" target="_blank"><img src="assets/images/projects/00_general/fb-icon.svg"></a></li>
                     </ul>
