Fixed splitted HTML files

--- a/index.html
+++ b/index.html
@@ -73,7 +73,17 @@
                     </div>
                 </div>
 
-                <div include-html="HTML-snippets/team.html"></div>
+                <div class="page__about-us" id="page__about-us">
+                    <div class="section-wrapper about-us">
+
+                        <div include-html="HTML-snippets/team.html"></div> 
+
+                        <div class="project__more-projects more-btn">
+                            <button type="submit" class="more-section-btn"><a href="about_us.html" class="more-btn-text">About us</a></button>
+                        </div>                       
+                    </div>
+                </div>
+                <!-- <div include-html="HTML-snippets/team.html"></div> -->
 
                 <div include-html="HTML-snippets/contact-form.html"></div>               
                 
