Fixed buttons in main page to links with <a> tag

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             </div>
                         </div>
                         <div class="project__more-projects more-btn">
-                            <button type="submit" class="more-section-btn"><a href="projects.html" class="more-btn-text">See More Projects</a></button>
+                            <a href="projects.html" class="more-btn-text">See More Projects</a>
                         </div>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                         <div include-html="HTML-snippets/team.html"></div> 
 
                         <div class="project__more-projects more-btn">
-                            <button type="submit" class="more-section-btn"><a href="about_us.html" class="more-btn-text">About us</a></button>
+                            <a href="about_us.html" class="more-btn-text">About us</a>
                         </div>                       
                     </div>
                 </div>
